# av-cv-learning

./: .gitignore  README.md  a.txt
Android/Android-AV/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Android/Android-AV/app-main/src/main/cpp/: CMakeLists.txt  README.md
Android/Android-AV/app-main/src/main/cpp/include/Glm/: README.md
Android/Android-AV/app-main/src/main/cpp/include/glm/: readme.txt
Android/Android-AV/app-main/src/main/cpp/include/glm-d/: README.md
Android/Android-AV/app-main/src/main/cpp/module/: native-lib.cpp
Android/Android-AV/app-main/src/main/cpp/module/common/: log.cpp  log.h  resources.cpp  resources.h  times.c  times.cpp  times.h
Android/Android-AV/app-main/src/main/cpp/module/opengl/: OpenGLES2.cpp  README.md  Sence.cpp
Android/Android-AV/app-main/src/main/cpp/module/opengl/common/: GLRenderer.h
Android/Android-AV/app-main/src/main/cpp/module/opengl/sample/: BackgroundRenderer.hpp
Android/Android-AV/app-main/src/main/cpp/module/opensl/: OpenSLESDemo.cpp  OpenSLESKit.h  OpenSLESKit_PCM.cpp  OpenSLES_Common.cpp  OpenSLES_PCM.cpp
Android/Android-AV/app-rtmp/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/Android-AV/app-rtmp/src/main/cpp/codec/: X264Codec.cpp
Android/Android-AV/app-rtmp/src/main/cpp/include/: README.md
Android/Android-AV/app-rtmp/src/main/cpp/jni/: JNI_Interface.cpp  LibRtmp.cpp  LibRtmp.h  Log.h  RtmpPusher.h  native-lib.cpp
Android/Android-AV/app-rtmp/src/main/cpp/librtmp/: CMakeLists.txt
Android/Android-AV/app-rtmp/src/main/cpp/module/: native-lib.cpp
Android/Android-AV/app-rtmp/src/main/cpp/module/codec/: AACCodec.cpp  AACCodec.h  AACParser.h  X264Codec.h  X264Parser.h
Android/Android-AV/app-rtmp/src/main/cpp/module/pusher/: RtmpPusher.h
Android/Android-AV/app-rtmp/src/main/cpp/module/utils/: Config.h  JavaCaller.h  Log.h
Android/Android-AV/app-rtmp/src/main/cpp/pusher/: RtmpPusher.h
Android/Android-AV/app-rtmp/src/main/cpp/tools/: RtmpPusher.h  SafeQueueCPP11.h
Android/Android-AV/app-rtmp/src/main/cpp/utils/: SafeQueue.h
Android/Android-AV/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
Android/Android-AV/app/src/main/cpp/common/: log.h
Android/Android-AV/app/src/main/cpp/module/: native-lib.cpp
Android/Android-AV/app/src/main/cpp/module/common/: log.h
Android/Android-AV/app/src/main/cpp/module/opengl/: Sence.cpp  Sence.h
Android/Android-CV/: README.md  settings.gradle
Android/Android-CV-Face/: README.md
Android/Android-CV-Face/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/Android-CV-Identification/: README.md
Android/Android-CV-Identification/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/Android-WebRTC/: README.md  settings.gradle.kts
Android/AndroidAV/: settings.gradle
CrossPlatform/OpenCV-Python/: .gitignore  README.md
FFmpeg/ImoocCourse/: README.md
MJ-AV/: .gitignore  README.md
MJ-AV/02_hello_ffmpeg/: 02_hello_ffmpeg.pro
MJ-AV/06_diy_signal_and_slot/: main.cpp  mainwindow.cpp  receiver.h
MJ-AV/07_signal_and_slots_ui/: main.cpp
MJ-AV/08_record_audio/: mainwindow.ui
MJ-AV/09_record_audio_thread/: audiothread.h  main.cpp
MJ-AV/09_record_audio_thread_correct/: 09_record_audio_thread_correct.pro  audiothread.cpp  audiothread.h
MJ-AV/10_sdl_play_pcm/: 10_sdl_play_pcm.pro  mainwindow.cpp  mainwindow.h  playthread.cpp
MJ-AV/10_sdl_play_pcm_optimized/: 10_sdl_play_pcm_optimized.pro
MJ-AV/12_pcm_to_wav/: 12_pcm_to_wav.pro  audiothread.cpp  ffmpegs.cpp  main.cpp  mainwindow.cpp
MJ-AV/13_audio_resample/: 13_audio_resample.pro  ffmpegs.cpp
MJ-AV/14_sdl_play_wav/: 14_sdl_play_wav.pro  mainwindow.cpp  mainwindow.h  playthread.cpp
MJ-AV/15_record_audio_wav/: audiothread.cpp  mainwindow.cpp
MJ-AV/16_aac_encode/: audiothread.h  ffmpegs.cpp  ffmpegs.h  main.cpp
MJ-AV/17_aac_decode/: ffmpegs.h
MJ-AV/26_h264_encode/: ffmpegs.h  (+1 more)
SDL-Base/: README.md
Web/: README.md
Windows/FFmpeg-CMake/: CMakeLists.txt  README.md
Windows/FFmpegWindows-Clion/: CMakeLists.txt  README.md  ffmpeg-main.cpp
Windows/GraphicsBase-CMake/: .gitignore  CMakeLists.txt  README.md
Windows/GraphicsBase-CMake/01-creating-window/: CMakeLists.txt  README.md  main.cpp
Windows/GraphicsBase-CMake/01-creating-window-vs/: .clang-format  README.md
Windows/GraphicsBase-CMake/01-window-of-windows/: window.cpp
Windows/GraphicsBase-CMake/02-draw-point/: CMakeLists.txt  main.cpp  raster.cpp  raster.h
Windows/GraphicsBase-CMake/libs/: CELLMath.hpp
Windows/OpenCV-Cmake/: CMakeLists.txt  README.md  main.cpp
Windows/OpenCV-Cmake/base/: base_image_process.cpp
Windows/OpenCV-Cmake/img/: README.md
Windows/OpenCV-Cmake/lib/: README.md
Windows/OpenCVWindows-Clion/: CMakeLists.txt  README.md
Windows/OpenGL-CGPCPP-CMake/: CMakeLists.txt  README.md
Windows/OpenGL-CGPCPP-CMake/lib/: README.md
Windows/OpenGL-CGPCPP-CMake/program2.1/: README.md  main.cpp
Windows/OpenGL_BASIC_CMake/: CMakeLists.txt  README.md
Windows/OpenGL_BASIC_CMake/01.hello_windows/: CMakeLists.txt  README.md  main.cpp
Windows/OpenGL_BASIC_CMake/02.hello_opengl/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/03.draw_points/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/04.draw_lines/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/05.draw_triangle/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/06.draw_quads/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/07.draw_polygon/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/08.matrix_operation/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/09.matrix_stack/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/10.lighting/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/11.texture/: CMakeLists.txt  main.cpp
Windows/OpenGL_BASIC_CMake/zlib/: CMakeLists.txt  GLKit.cpp  GLKit.h  IOKit.cpp  IOKit.h  LogKit.cpp  LogKit.h  TextureKit.cpp  TextureKit.h  WindowKit.cpp  WindowKit.h
(+827 files in other folders)
